--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">MyBills2</string>
+    <string name="app_name">AccessiBill</string>
+    <string-array name="spinner_types">
+        <item>Cable</item>
+        <item>Credit</item>
+        <item>Electricity</item>
+        <item>Gas</item>
+        <item>Heating</item>
+        <item>Internet</item>
+        <item>Water</item>
+        <item>Other</item>
+    </string-array>
+    <string-array name="spinner_months">
+        <item>All</item>
+        <item>1</item>
+        <item>3</item>
+        <item>6</item>
+        <item>12</item>
+    </string-array>
 </resources>
